($Id: ChangeLog,v 1.34 2001-05-08 18:03:18 rufustfirefly Exp $)

2001-05-08  jeff b  <jeff@univrel.pr.uconn.edu>

	* bin/megatron/Makefile.am, etc/uams/Makefile.am: small Makefile fixes
	from Olaf Hering <olh@suse.de>

	* etc/uams/uams_dhx_passwd.c: Tru64 fixes from Burkhard Schmidt
	<bs@cpfs.mpg.de>

2001-05-07  jeff b  <jeff@univrel.pr.uconn.edu>

	* contrib/shell_utils/netatalkshorternamelinks.pl: added script to
	shorten names

	* etc/afpd/quota.c, etc/uams/uams_passwd.c: patches from Burkhard
	Schmidt <bs@cpfs.mpg.de> to fix typos

2001-05-03  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/quota.c, etc/afpd/unix.h, etc/afpd/main.c,
	etc/uams/uams_passwd.c: Tru64 patch from Burkhard Schmidt <bs@cpfs.mpg.de>

	* configure.in, etc/afpd/quota.c, etc/afpd/unix.h: fixes for USE_*_H
	moving to autodetected HAVE_*_H from autoconf script

2001-05-01  jeff b  <jeff@univrel.pr.uconn.edu>

	* bin/aecho/aecho.c, bin/getzones/getzones.c, bin/megatron/asingle.c,
	bin/megatron/hqx.c, bin/megatron/macbin.c, bin/megatron/megatron.c,
	bin/megatron/nad.c, bin/megatron/updcrc.c, libatalk/atp/atp_bprint.c,
	libatalk/util/getiface.c: warnings patch from Sebastian Rittau
	<srittau@users.sourceforge.net> (#420300)

	* bin/afile/*: replacement for old restrictive afile from Sebastian
	Rittau <srittau@users.sourceforge.net> (#420302)

	* distrib/initscripts/rc.atalk.redhat.tmpl: daemon-specific start and
	stop messages to the redhat initscript. nbpregister and unregister
	messages are also displayed. This patch also permits spaces in zone
	and machine names to be used in the variables. From Ryan Cleary
	<tryanc@users.sourceforge.net> (#418094)

	* bin/megatron/Makefile.am: patch to properly create links for
	megatron, from Sebastian Rittau <srittau@users.sourceforge.net>
	(#420446)

2001-04-25  morgan a <morgan@orst.edu>

	* etc/afpd/unix.c: in setdirowner(), changed some of the syslog
	statements from LOG_ERR to LOG_DEBUG.  Some common "soft errors"